replaced filler text

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
                 <div class="d-flex align-items-center text-center row">
                     <div class="header-text col-12 animated fadeInDown slow delay-1s"> <!-- For Text -->
                         <p>
-                            Hi, my name's <span class="pink">Ian</span>,<br>and I'm a Web Developer.
+                            My name's <span class="pink">Ian</span>, 
                         </p>
                     </div>
-                    <div class="header-icons col-12 animated fadeInDown slow delay-3s">
+                    <div class="header-text col-12 animated fadeInDown slow delay-2s">
+                        <p>
+                        I'm a Web Developer.
+                        </p>
+                    </div>
+                    <div class="header-icons col-12 animated fadeInDown slower delay-3s">
                         <a href="https://github.com/Ieapplekamp" target="_blank">
                             <i class="fab fa-github-square" title="GitHub"></i>
                         </a>
@@ -78,7 +83,7 @@
         </button>
 
         <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav d-flex align-items-center">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">
                         <i class="fas fa-home"></i>
@@ -124,7 +129,6 @@
                                 <div class="about-me" data-aos="fade-up"
                                 data-aos-anchor-placement="top-bottom">
                                     <span><a href="mailto: ieapplekamp@gmail.com" target="_blank"><i class="pink fas fa-envelope mr-3"></i>ieapplekamp@gmail.com</a></span>
-                                    
                                 </div>
                                 
                                 <div class="about-me" data-aos="fade-up"
@@ -133,7 +137,6 @@
                                     <div class="dropdown">
                                         <div data-flip="false" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Raleigh NC
-                                        <!-- </button> -->
                                             <div class="dropdown-menu dropdown-menu-right hidden" aria-labelledby="dropdownMenuButton">
                                                 <p class="text-center drop-right">I'm incredibly interested in relocating!</p>
                                             </div>
@@ -201,7 +204,7 @@
                                             <div class="d-flex justify-content-center" data-aos="fade-up"
                                             data-aos-anchor-placement="top-bottom">
                                                 <p class="portfolio-descriptions">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia, laboriosam nihil explicabo optio, iure illum autem eos temporibus aperiam quo nobis fugit harum molestiae ratione, numquam aspernatur consectetur expedita.<br>
+                                                    Little Stitious, developed to be a "Truther's" go to place for all things cryptic! The idea was to create a space for people to be able to post about all the unexplained things they've whitnessed, from ghosts to ghouls. Users can find the most updated information about siting, as well as post their own to the database. <br><br> For this project my main priorities were user authentication and design.
                                                     <a href="https://github.com/Ieapplekamp/Project-2" target="_blank">
                                                         <i class="mt-5 d-flex justify-content-center githubIcons fab fa-github-alt"></i>
                                                     </a>
@@ -221,7 +224,7 @@
                                             <div class="d-flex justify-content-center" data-aos="fade-up"
                                             data-aos-anchor-placement="top-bottom">
                                                 <p class="portfolio-descriptions">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia, laboriosam nihil explicabo optio, iure illum autem eos temporibus aperiam quo nobis fugit harum molestiae ratione, numquam aspernatur consectetur expedita.<br>
+                                                    Order Up! is a crud app, built around Handlebars and MySQL. Users can update and delete orders, much like a "to do" list. Other libraries used for this project are, AnimateCSS and jQuery. <br><br> This was one of the more challenging assigments, as those two technologies were a bit of a hassle to deploy to Heroku and the file structure for Handlebars was initially a challenge to wrap my head around.
                                                     <a href="https://github.com/Ieapplekamp/Burger" target="_blank">
                                                         <i class="mt-5 d-flex justify-content-center githubIcons fab fa-github-alt"></i>
                                                     </a>
@@ -240,7 +243,7 @@
                                         <div class="col-5 d-flex align-items-center"> 
                                             <div class="d-flex justify-content-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                                 <p class="portfolio-descriptions">
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia, laboriosam nihil explicabo optio, iure illum autem eos temporibus aperiam quo nobis fugit harum molestiae ratione, numquam aspernatur consectetur expedita.<br>
+                                                    Friend Finder is a full-stack application, using Express, NodeJS, HTML5, Bootstrap, and Sweet Alert. The app matches the user with the most compatible 'friend' based on their responses to the survey. <br><br> The theme of this app was based off of the Scary Movie trilogy. This was one of my more favorite projects, because I was able to have fun and make it about something I found humorous. 
                                                     <a href="https://github.com/Ieapplekamp/FriendFinder" target="_blank">
                                                         <i class="mt-5 d-flex justify-content-center githubIcons fab fa-github-alt"></i>
                                                     </a>
